# Tweet_NLP_Classification

./: NOTICE  README.md
code/Classification(Java)/: .classpath  .project
code/Classification(Java)/resources/: corpustodo.txt
code/Classification(Java)/src/helpers/: FileParser.java
code/Classification(Java)/src/logic/: Classifier.java  Main.java
code/Vocabulary_and_Learning(Haskell)/: .gitignore  .project  PLN-twitter.cabal
code/Vocabulary_and_Learning(Haskell)/app/: Main.hs
code/Vocabulary_and_Learning(Haskell)/generateFiles/: corpusnrel.txt  corpusnrel.txtlearn  corpusnrel.txtlearn-old  corpusrel.txt  corpusrel.txtlearn  corpusrel.txtlearn-old  corpustodo.txt  vocabulary.txt
code/Vocabulary_and_Learning(Haskell)/src/: Common.hs  Test.hs  Unigrams.hs  Vocabulary.hs
documents/: acierto.txt  clasificacion.txt
