name:                PLN-twitter
version:             0.1.0.0
synopsis:            PLN analisis form tweets
description:         Please see README.md
homepage:            TODO:
license:             BSD3
license-file:        LICENSE
author:              Eleazar Díaz Delgado, Adrián Bazaga 
maintainer:          eleazardzdo@gmail.com
copyright:           2016 Eleazar Díaz Delgado, Adrián Bazaga 
category:            Processing
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Common
                     , Vocabulary
                     , Unigrams
  build-depends:       base >= 4.7 && < 5
                     , text
                     , attoparsec
                     , containers
  default-language:    Haskell2010

executable pln
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , PLN-twitter
                     , text
                     , attoparsec
                     , containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/TODO:
